--- a/templates/instructors/sidebar.html
+++ b/templates/instructors/sidebar.html
@@ -21,6 +21,18 @@
                 </a>
             </li>
             <li class="nav-item">
+                <a class="nav-link" href="{% url 'instructors:student_attendance_report' %}">
+                    <i class="bi bi-calendar-check"></i>
+                    Attendance Report
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'instructors:instructor_daily_attendance' %}">
+                    <i class="bi bi-person-check"></i>
+                    My Attendance
+                </a>
+            </li>
+            <li class="nav-item">
                 <a class="nav-link" href="{% url 'instructors:materials' %}">
                     <i class="bi bi-file-earmark-text"></i>
                     Materials
