--- a/templates/students/sidebar.html
+++ b/templates/students/sidebar.html
@@ -1,77 +1,67 @@
+<!-- Sidebar -->
 <nav id="sidebar" class="col-md-3 col-lg-2 d-md-block bg-light sidebar collapse">
     <div class="position-sticky pt-3">
         <ul class="nav flex-column">
             <li class="nav-item">
-                <a class="nav-link {% if request.resolver_match.url_name == 'dashboard' %}active{% endif %}" 
-                   aria-current="page" href="{% url 'students:dashboard' %}">
+                <a class="nav-link" href="{% url 'students:dashboard' %}">
                     <i class="bi bi-speedometer2"></i>
                     Dashboard
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {% if request.resolver_match.url_name == 'my_courses' %}active{% endif %}" 
-                   href="{% url 'students:my_courses' %}">
-                    <i class="bi bi-book"></i>
+                <a class="nav-link" href="{% url 'students:my_courses' %}">
+                    <i class="bi bi-journal-text"></i>
                     My Courses
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {% if request.resolver_match.url_name == 'assignments' %}active{% endif %}" 
-                   href="{% url 'students:assignments' %}">
+                <a class="nav-link" href="{% url 'students:assignments' %}">
                     <i class="bi bi-file-earmark-text"></i>
                     Assignments
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {% if request.resolver_match.url_name == 'schedule' %}active{% endif %}" 
-                   href="{% url 'students:schedule' %}">
+                <a class="nav-link" href="{% url 'students:materials' %}">
+                    <i class="bi bi-file-earmark-text"></i>
+                    Materials
+                </a>
+            </li>
+            <li class="nav-item">
+                <a class="nav-link" href="{% url 'students:schedule' %}">
                     <i class="bi bi-calendar"></i>
                     Schedule
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {% if request.resolver_match.url_name == 'materials' %}active{% endif %}" 
-                   href="{% url 'students:materials' %}">
-                    <i class="bi bi-folder"></i>
-                    Materials
+                <a class="nav-link" href="{% url 'students:daily_attendance' %}">
+                    <i class="bi bi-calendar-check"></i>
+                    Daily Attendance
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {% if request.resolver_match.url_name == 'videos' %}active{% endif %}" 
-                   href="{% url 'students:videos' %}">
-                    <i class="bi bi-camera-video"></i>
-                    Videos
-                </a>
-            </li>
-            <li class="nav-item">
-                <a class="nav-link {% if request.resolver_match.url_name == 'messages' %}active{% endif %}" 
-                   href="{% url 'students:messages' %}">
+                <a class="nav-link" href="{% url 'students:messages' %}">
                     <i class="bi bi-chat-dots"></i>
                     Messages
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {% if request.resolver_match.url_name == 'settings' %}active{% endif %}" 
-                   href="{% url 'students:settings' %}">
+                <a class="nav-link" href="{% url 'students:settings' %}">
                     <i class="bi bi-gear"></i>
                     Settings
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {% if request.resolver_match.url_name == 'about' %}active{% endif %}" 
-                   href="{% url 'students:about' %}">
+                <a class="nav-link" href="{% url 'students:about' %}">
                     <i class="bi bi-info-circle"></i>
                     About
                 </a>
             </li>
             <li class="nav-item">
-                <a class="nav-link {% if request.resolver_match.url_name == 'contact' %}active{% endif %}" 
-                   href="{% url 'students:contact' %}">
-                    <i class="bi bi-telephone"></i>
+                <a class="nav-link" href="{% url 'students:contact' %}">
+                    <i class="bi bi-envelope"></i>
                     Contact
                 </a>
             </li>
-            <!-- Logout link -->
             <li class="nav-item mt-3">
                 <a class="nav-link" href="{% url 'logout' %}">
                     <i class="bi bi-box-arrow-right"></i>
